--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>hey i am using git hub</h1>
     <p>hey amr mehedi</p>
+    <h2>this my final semester</h2>
+    <p>nothing to say</p>
 </body>
 </html>
