--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>this my final semester</h2>
     <p>nothing to say</p>
     <h1>try hard <b>and</b> and soul</h1>
+    <img src="download.jpg" alt="">
 </body>
 </html>
